# Artifact-DataDepSimplify

./: LICENSE  README.md  codeGenlist.txt  codegen.cc  fig6Gen.sh  install.sh  list.txt  performance.cc  simplification.cc
IEGenLib/: CMakeLists.txt  COPYING  IEGenLib-svn-log.txt  Makefile  README  build-n-install  configure
IEGenLib/cmake/modules/: FindGMP.cmake  FindMyPythonLibs.cmake  MacroOutOfSourceBuild.cmake
IEGenLib/data/Forward-Solve_CSC/: forwSolCSC.c  forwSolCSC.json  runscript.sh
IEGenLib/data/Forward-Solve_CSR/: forwSolCSR.c  forwSolCSR.json  runscript.sh
IEGenLib/data/GAXPY/: gaxpy.cpp  gaxpy_csc.json  runscript.sh
IEGenLib/data/Gauss-Seidel_BCSR/: gs_bcsr.cpp  gs_bcsr.json  runscript.sh
IEGenLib/data/Gauss-Seidel_CSR/: gs_csr.cpp  gs_csr.json  runscript.sh
IEGenLib/data/IC0_CSR/: ic0.cpp  ic0_csc.json  runscript.sh
IEGenLib/data/ILU0_CSR/: ilu0.json  ilu0_csr.cpp  runscript.sh
IEGenLib/data/LeftCholesky_CSC/: leftCholesky_static.cpp  leftCholesky_static.json  runscript.sh
IEGenLib/data/LeftLU_CSC/: leftLU_static.cpp  leftLU_static.json  runscript.sh
IEGenLib/data/SpMV_CSR/: SpMV.c  SpMV.json  runscript.sh
IEGenLib/data/SpSpMUL_CSC/: SpMM.json  runscript.sh  smSmMul.c
IEGenLib/doc/: CMakeLists.txt  development_practices.lyx  doxyconfig  mapir.lyx  sparse_constraints.dot  sparse_constraints.lyx
IEGenLib/doc/PythonScriptExamples/: README-example.py
IEGenLib/doc/PythonScriptExamples/DoNotDistribute/: lcpc12-iegenlib-paper.py  techReport-CS-10-102.py
IEGenLib/doc/PythonScriptExamples/DoNotDistribute/MoldynFSTExample/: moldyn-FST-M2-example_sparse.py
IEGenLib/doc/PythonScriptExamples/DoNotDistribute/MoldynFSTExample/OldSpecFiles/: moldyn-FST-example.tex  moldyn_fst_common.c  moldyn_fst_comp.spec  moldyn_fst_cpack.c  moldyn_fst_cpack.spec  moldyn_fst_cpack_align.c  moldyn_fst_cpack_align.spec  moldyn_fst_cpack_cpack.spec  (+4 more)
IEGenLib/lib/: README-for-Cathie  externals.txt
IEGenLib/lib/glog/: CMakeLists.txt  config.h  config_general_32.h  logging.cc  signalhandler.cc  utilities.cc
IEGenLib/lib/gtest/: CMakeLists.txt  VERSION  gtest-death-test.cc  gtest-port.cc  gtest.cc
IEGenLib/lib/isl/: Makefile.in  aclocal.m4  configure
IEGenLib/lib/isl/doc/: Makefile.in
IEGenLib/lib/isl/interface/: Makefile.in
IEGenLib/scripts/: bldScr  make_dist_tarball.sh  run_cloc
IEGenLib/src/: CMakeLists.txt  chillusage_test.cc  cpp_api_example.cc  exceptions_test.cc  iegenlib.h  iegenlib_calc.cc  iegenlib_unit_test.cc
IEGenLib/src/bindings/: CMakeLists.txt  iegenlib.i
IEGenLib/src/drivers/: DEPRECATED_simplifyDriver.cc  simplification.cc  superAffSet.cc
IEGenLib/src/parser/: gen_parser.cc  gen_parser.hh  gen_scanner.cc  parser.cc  parser.l  parser.y  parser_test.cc
IEGenLib/src/parser/jsoncons/: json.hpp  json_deserializer.hpp  json_error_category.hpp  json_input_handler.hpp  json_output_handler.hpp  json_parser.hpp  json_structures.hpp  jsoncons.hpp
IEGenLib/src/set_relation/: SubMap.cc  SubMap.h  TupleDecl.cc  TupleDecl.h  TupleDecl_test.cc  UFCallMap.cc  UFCallMap.h  UFCallMap_test.cc  UninterpFunc.cc  UninterpFunc.h  Visitor.h  complexityForPartialParallel.cc  complexityForPartialParallel_test.cc  detectUnsatOrFindEqualities_test.cc  environment.cc  environment.h  environment_test.cc  expression.cc  expression.h  expression_test.cc  isl_str_manipulation.cc  isl_str_manipulation.h  isl_str_manipulation_test.cc  normalization_test.cc  reOrdTV_OmegaCodeGen.cc  reOrdTV_OmegaCodeGen_test.cc  setRelationship.cc  setRelationship_test.cc  set_relation.cc  set_relation.h  set_relation_test.cc
IEGenLib/src/set_relation/dotTest/: testConjToDotStringTest1.in.dot  testExpToDotStringTest1.in.dot  testExpToDotStringTest2.in.dot  testRelToDotStringTest1.in.dot  testRelToDotStringTest2.in.dot  testSetToDotStringTest1.in.dot  testSetToDotStringTest2.in.dot  viewFracDot.sh
IEGenLib/src/util/: UnionFindUniverse.cc  UnionFindUniverse.h  UnionFind_test.cc  jsonHelper.cc  jsonHelper.h  util.cc  util.h  util_test.cc
performanceDrivers/simplification/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ichol_wavefront  out  performance.cc  simplification  triangular
performanceDrivers/simplification/data/: bcsstm08.mtx
performanceDrivers/simplification/results/: fs_insp_exec_per_app.csv  gnpExecPer.gnu  gnpFigIC0PER.gnu  gnpFigIC0PER_app.gnu  gnpInspPer.gnu  ic0_insp_exec_per.csv  ic0_insp_exec_per_app.csv
performanceDrivers/simplification/results/parPrem/: ic0_per_table_par.csv
performanceDrivers/simplification/results/prem/: fs_per_table.csv  ic0_insp_exec_per.csv  ic0_insp_exec_per_app.csv  ic0_per_table_app1.0.csv
performanceDrivers/simplification/src/: BFS.h  ColumnCount.h  Etree.h  Transpose.h  def.h  fs_csc_executor.h  fs_csc_inspector.h  fs_csc_original.h  fs_csr_inspector.h  gs_bcsr.h  gs_csr.h  hlevel_simplicial_cholesky.h  ic0_csc_inspector.h  serial_simplicial_Cholesky_01.h  sparse_utils.h  symbolic_analysis_CSC.h  transpose.h  triangularSolve_inspector.h  wavefront_simplicial_Cholesky.h
performanceDrivers/simplification/test/: BUfs_csc_performance.cpp  HLevel_simplicial_cholesky.cpp  fs.cpp  fs_csc_performance.cpp  fs_csr_performance.cpp  gsTest.cpp  gs_csr_performance.cpp  ic0.cpp  ic0_csc_performance.cpp  ic0_csc_performanceEE.cpp  serialCholeskyTest01.cpp  simplCholeskyWavefront.cpp  triangular_ordered.cpp
performanceEval/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  execList.txt  genFig7A8.sh  getDataAndInstall.sh  list.txt  matList.txt  performance.cc  sExecList.txt  sList.txt
performanceEval/results/: exec.csv  gnpFig7.gnu  gnpFig8.gnu  insp.csv
performanceEval/src/: PostOrder.h  fs_csc_executor.h  fs_csc_inspector.h  fs_csr_executor.h  fs_csr_original.h  gs_csr_executor.h  gs_csr_inspector.h  gs_csr_original.h  ic0_csc_executor.h  inspection_DAG03.h  lchol_csc_executor.h  lchol_csc_inspector.h  lchol_csc_original.h  util.h
performanceEval/test/: fs_csc_performance.cpp  fs_csr_performance.cpp  gs_csr_performance.cpp  ic0_csc_performance.cpp  lchol_csc_performance.cpp
(+98 files in other folders)
